intersection observer to make visual effects when searching movies

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 
     <script src="apikeys.js"></script>
+    <script src="observer.js"></script>
     <script src="search.js"></script>
     <script src="cards.js"></script>
     <script src="display.js"></script>
